--- a/config_sample.env
+++ b/config_sample.env
@@ -1,18 +1,17 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 # REQUIRED CONFIG
 BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+OWNER_ID = "7255612720"                               # Require restart after changing it while bot running
+TELEGRAM_API = "24401235"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "149f7e13d7d861b27cffc3ab1fd52b22"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://avineyjr004:KaiNey009@cluster0.wla20hl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1002747283382"                       # Require restart after changing it while bot running
+SUDO_USERS = "7255612720"                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
@@ -23,7 +22,7 @@ SET_COMMANDS = "True"
 EXTENSION_FILTER = ""
 YT_DLP_OPTIONS = ""
 FSUB_IDS = ""
-BOT_PM = ""
+BOT_PM = "True"
 
 # GDrive Tools
 GDRIVE_ID = ""
@@ -34,7 +33,7 @@ USE_SERVICE_ACCOUNTS = "False"
 IS_TEAM_DRIVE = "False"
 STOP_DUPLICATE = "False"
 DISABLE_DRIVE_LINK = "False"
-GD_INFO = "Uploaded by WZML-X"
+GD_INFO = "Uploaded by Leo"
 
 # API's/Cookies
 REAL_DEBRID_API = ""
@@ -117,9 +116,9 @@ IMDB_TEMPLATE = ""
 MDL_TEMPLATE = ""
 
 # Telegraph
-TITLE_NAME = "WZ-M/L-X"
-AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "https://t.me/VJ_Botz"
+TITLE_NAME = "Leo"
+AUTHOR_NAME = "Leo"
+AUTHOR_URL = "https://t.me/Leo_offcl"
 COVER_IMAGE = ""
 
 # Extra
