--- a/config_sample.env
+++ b/config_sample.env
@@ -1,6 +1,6 @@
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
+BOT_TOKEN = "8034968460:AAF6LBEGQtepEynzb66hw-nRTDOk1IzJo40"                              # Require restart after changing it while bot running
 OWNER_ID = "7255612720"                               # Require restart after changing it while bot running
 TELEGRAM_API = "24401235"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "149f7e13d7d861b27cffc3ab1fd52b22"                          # Require restart after changing it while bot running
